--- a/javaapp-standalone/chart/my-java-app/values.yaml
+++ b/javaapp-standalone/chart/my-java-app/values.yaml
@@ -53,7 +53,7 @@ ingress:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
     alb.ingress.kubernetes.io/target-type: ip
   hosts:
-    - host: "*"
+    - host:
       paths:
         - path: /
           pathType: Prefix
