Fix indentation in values.yaml for ALB configuration

--- a/javaapp-standalone/chart/my-java-app/values.yaml
+++ b/javaapp-standalone/chart/my-java-app/values.yaml
@@ -53,8 +53,7 @@ ingress:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
     alb.ingress.kubernetes.io/target-type: ip
   hosts:
-    - host:
-      paths:
+    - paths:
         - path: /
           pathType: Prefix
   tls: []
